start fix UI scores z-index

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -71,7 +71,10 @@ table{
 }
 
 #scores{
-    float: right;
+    z-index: 2;
+    position: absolute;
+    top: 1%;
+    right: 1%;
     margin: 1%;
 }
 
